syntax="proto3";

option go_package = "./genproto/budgetpb";

service BudgetService {
    rpc CreateBudget(CreateBudgetRequest) returns (CreateBudgetResponse);
    rpc GetListBudget(GetListBudgetRequest) returns (GetListBudgetResponse);
    rpc UpdateBudget(UpdateBudgetRequest) returns (UpdateBudgetResponse);
}

message CreateBudgetRequest {
    string category_id = 1;
    int64 amount = 2;
    string currency = 3;
}

message CreateBudgetResponse {
    string message = 1;
    string budget_id = 2;
}

message GetListBudgetRequest {}

message Budget {
    string budget_id = 1;
    string category = 2;
    int64 amount = 3;
    int64 spent = 4;
    string currency = 5;
}

message GetListBudgetResponse {
    repeated Budget list = 1;
}

message UpdateBudgetRequest {
    string budget_id = 1;
    int64 amount = 2;
}

message UpdateBudgetResponse {
    string message = 1;
}